# Rouge_like_game_project

./: .gitignore  CMakeLists.txt  GameData.txt  README.md
Assets/: mapData.json
Game/: Ability.cpp  Ability.h  Button.cpp  Button.h  CollisionManager.cpp  CollisionManager.h  Command.cpp  Command.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.h  FileManager.cpp  FileManager.h  Game.cpp  GameElement.cpp  GameElement.h  GameManager.cpp  GameManager.h  GameMap.h  GameMenu.h  GameplayInfoSource.cpp  GameplayInfoSource.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Item.h  ItemBuilder.cpp  ItemBuilder.h  Map.h  MapManager.cpp  MapManager.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  (+15 more)
Game/AIController/: AIAttack.cpp  AIAttack.h  AIController.cpp  AIController.h  AIControllerDifficulty.cpp  AIControllerDifficulty.h  AICooldown.cpp  AICooldown.h  AIDecision.cpp  AIDecision.h  AIMovement.cpp  AIMovement.h  AISensing.cpp  AISensing.h  AIState.cpp  AIState.h  CMakeLists.txt
Game/Factory/: CMakeLists.txt  EnemyFactory.cpp  EnemyFactory.h  EntityBuilder.cpp  EntityBuilder.h  UIFactory.cpp  UIFactory.h
Game/Spawner/: CMakeLists.txt  EnemyManager.cpp  EnemyManager.h  SpawnComponent.cpp  SpawnComponent.h  SpawnManager.cpp  SpawnManager.h  SpawnRule.cpp  SpawnRule.h  SpawnStrategy.h  Spawner.cpp  Spawner.h
Game/States/: CMakeLists.txt  GameState.cpp  GameState.h  StateManager.cpp  StateManager.h
Game/UI/: Button.h  CMakeLists.txt  DynamicGameElement.h  DynamicText.cpp  DynamicText.h  GameElement.cpp  GameElement.h  Text.cpp  Text.h  UIContainer.cpp  UIContainer.h  UIElement.cpp  UIManager.cpp  UIManager.h  ViewManager.cpp  ViewManager.h
algorithm/: CMakeLists.txt
algorithm/inc/: AIAttack.h  AIController.h  AIDecision.h  AIMovement.h  AISensing.h  AIState.h
algorithm/src/: AIAttack.cpp  AIController.cpp  AIControllerDifficulty.cpp  AICooldown.cpp  AIDecision.cpp  AIMovement.cpp  AISensing.cpp  AIState.cpp
core/: CMakeLists.txt
core/inc/: Command.h  Event.h  FileManager.h  GameManager.h  GameMap.h  GameState.h  GameplayInfoSource.h  InputManager.h  MapManager.h  StateManager.h
core/src/: Command.cpp  FileManager.cpp  Game.cpp  GameManager.cpp  GameState.cpp  GameplayInfoSource.cpp  InputManager.cpp  MapManager.cpp  StateManager.cpp
entity/: CMakeLists.txt
entity/inc/: Ability.h  Enemy.h  Entity.h  Item.h  Player.h  Potion.h  Projectile.h  Weapon.h
entity/src/: Ability.cpp  Enemy.cpp  Entity.cpp  Item.cpp  Player.cpp  Potion.cpp  Projectile.cpp  Weapon.cpp
factory/: CMakeLists.txt
factory/inc/: EnemyFactory.h  EntityBuilder.h  ItemBuilder.h  UIFactory.h
factory/src/: EnemyFactory.cpp  EntityBuilder.cpp  ItemBuilder.cpp  UIFactory.cpp
logic/: CMakeLists.txt
logic/inc/: CollisionManager.h  EnemyManager.h  PlayerManager.h  ProjectileManager.h  SpawnComponent.h  SpawnManager.h  SpawnRule.h  Spawner.h  ViewManager.h
logic/src/: CollisionManager.cpp  EnemyManager.cpp  PlayerManager.cpp  ProjectileManager.cpp  SpawnComponent.cpp  SpawnManager.cpp  SpawnRule.cpp  Spawner.cpp  ViewManager.cpp
resources/data/: GameData.txt  mapData.csv
ui/: CMakeLists.txt
ui/inc/: Button.h  DynamicGameElement.h  DynamicText.h  GameElement.h  Image.h  UIContainer.h  UIElement.h  UIManager.h
ui/src/: Button.cpp  DynamicGameElement.cpp  DynamicText.cpp  GameElement.cpp  Image.cpp  Text.cpp  UIContainer.cpp  UIElement.cpp  UIManager.cpp
